--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,19 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+.project
+.lock
+.ini
+.location
+.tree
+.version
+.index
+.resources
+.prefs
+.dat
+.xml
+.ser
+.setup
+.dll
+LICENSE
