--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,9 @@ replay_pid*
 .setup
 .dll
 LICENSE
-./metadata
-./metadata/
-./bin
-./bin/
-./lib
-./lib/
+/.metadata
+/.metadata/
+/bin
+/bin/
+/lib
+/lib/
